# NetFixInspector

./: .gitattributes  .gitignore  README.md
.github/: INITIALIZED.txt
outputs/: CHECKSUMS.txt  DHCP-Active-Probe.bat  NetFixInspector-repair-dryrun.json  NetFixInspector-report.json  README_zh.md  Run-NetFixInspector-Electron.bat  sample-report-cpp.json  sample-report.json
outputs/NetFixInspector-Electron/: README_zh.md
outputs/NetFixInspector-Electron/resources/: app.asar
outputs/netfix_cpp_windows/: CMakeLists.txt  LICENSE  Npcap-Status.bat  README_zh.md  build_windows_cpp.ps1  build_windows_mingw.ps1
outputs/netfix_cpp_windows/include/: cli.h  pcap_checks.h  probe.h  report.h  util.h
outputs/netfix_cpp_windows/src/: main.cpp  net_win.cpp
outputs/netfix_electron/: build_electron.ps1  package-lock.json  package.json
outputs/netfix_electron/src/: main.js
outputs/netfix_electron/src/renderer/: index.html  renderer.js  (+1 more)
outputs/netfix_tool/: DHCP-Check.bat  DHCP-Packet-Capture.bat  DNS-Check.bat  NAT-Check.bat  Port-Ping.bat  Quick-Scan.bat  README_zh.md  Repair-DryRun.bat  Run-NetFixInspector.bat  netfix.py  run_windows.bat
work/netfix_cpp_windows/: Loop-Detect.bat  README_zh.md  verify_source.ps1
work/netfix_cpp_windows/include/: cli.h  net_win.h
work/netfix_cpp_windows/src/: cli.cpp  pcap_checks.cpp  probe.cpp  report.cpp
work/netfix_electron/: README_zh.md  build_electron.ps1  package-lock.json  package.json
work/netfix_electron/src/: main.js  preload.js
work/netfix_tool/: README_zh.md  USAGE_QUICKSTART.txt  build_windows.ps1  netfix-linux.sh
(+6 files in other folders)
